test/cpls/errors/first-let-arg.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "let",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "VALUE",
      "value": 1,
      "offset": 4,
      "line": 1,
      "column": 5
    },
    {
      "type": "VALUE",
      "value": 1,
      "offset": 7,
      "line": 1,
      "column": 8
    }
  ]
}